exports[`Carousel should apply custom slides per page when responsive param provided 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
// 
// 
"
`;

exports[`Carousel should apply default carousel width when element has 0 width 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
// 
// 
"
`;

exports[`Carousel should be unable to advance backward by default 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
// 
// 
"
`;

exports[`Carousel should be unable to advance forward by default (no slides added) 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
// 
// 
"
`;

exports[`Carousel should begin autoplaying when option specified 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
    .VueCarousel-slide
    .VueCarousel-slide
|  
.VueCarousel-pagination
  .VueCarousel-dot-container
    .VueCarousel-dot.VueCarousel-dot--active(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
    .VueCarousel-dot(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
// 
"
`;

exports[`Carousel should decrease current slide number by 1 when advance page backward is called 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style='visibility: hidden;')
    .VueCarousel-slide
    .VueCarousel-slide
|  
.VueCarousel-pagination
  .VueCarousel-dot-container
    .VueCarousel-dot(style='margin-top: 20px; padding: 10px;')
      .VueCarousel-dot-inner(style='width: 10px; height: 10px; background: rgb(239, 239, 239);')
    .VueCarousel-dot.VueCarousel-dot--active(style='margin-top: 20px; padding: 10px;')
      .VueCarousel-dot-inner(style='width: 10px; height: 10px; background: rgb(0, 0, 0);')
// 
"
`;

exports[`Carousel should fall back to default slides per page when no responsive param provided 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
    .VueCarousel-slide
    .VueCarousel-slide
    .VueCarousel-slide
|  
.VueCarousel-pagination(style=\'\')
  .VueCarousel-dot-container
    .VueCarousel-dot.VueCarousel-dot--active(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
    .VueCarousel-dot(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
// 
"
`;

exports[`Carousel should increase current slide number by 1 when advance page is called 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
    .VueCarousel-slide
    .VueCarousel-slide
|  
.VueCarousel-pagination
  .VueCarousel-dot-container
    .VueCarousel-dot(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
    .VueCarousel-dot.VueCarousel-dot--active(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
// 
"
`;

exports[`Carousel should increase current slide number by 1 when advance page is called with a non "backward" argument 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
    .VueCarousel-slide
    .VueCarousel-slide
|  
.VueCarousel-pagination
  .VueCarousel-dot-container
    .VueCarousel-dot(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
    .VueCarousel-dot.VueCarousel-dot--active(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
// 
"
`;

exports[`Carousel should loop back to the start when loop is true and advance page non "backward" is called from the last page 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
    .VueCarousel-slide
    .VueCarousel-slide
|  
.VueCarousel-pagination
  .VueCarousel-dot-container
    .VueCarousel-dot.VueCarousel-dot--active(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
    .VueCarousel-dot(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
// 
"
`;

exports[`Carousel should loop to the end when loop is true and advance page "backward" is called from the first page 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
    .VueCarousel-slide
    .VueCarousel-slide
|  
.VueCarousel-pagination
  .VueCarousel-dot-container
    .VueCarousel-dot(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
    .VueCarousel-dot.VueCarousel-dot--active(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
// 
"
`;

exports[`Carousel should mount successfully 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
// 
// 
"
`;

exports[`Carousel should register 0 slides when 0 slides are added to the slots 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
// 
// 
"
`;

exports[`Carousel should register 3 slides when 3 slides are added to the slots 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
    .VueCarousel-slide
    .VueCarousel-slide
    .VueCarousel-slide
|  
.VueCarousel-pagination
  .VueCarousel-dot-container
    .VueCarousel-dot.VueCarousel-dot--active(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
    .VueCarousel-dot(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
// 
"
`;

exports[`Carousel should unmount successfully 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
// 
// 
"
`;
